Messages for owner only

--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -137,7 +137,7 @@
             [command]
                 [message]
                     speaker=narrator
-                    message=_"Set messages when receives a wound. Units or narrator will do differents dialogues depending on the type of wound received, with indications or help if applicable."
+                    message=_"Set messages when receives a wound. Units or narrator will do differents dialogues depending on the type of wound received, with indications or help if applicable. This message is visible only for the wounded unit owner."
                     image="misc/nfw-icon.png"
                     [option]
                         label="<b>»</b> "+"<i>"+_"Activate"+"</i>"
