--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -140,6 +140,7 @@
         [then]
             [message]
                 speaker=$unit.id
+                side_for=$unit.side
                 message= _ "Argh, I’m dying!"
                 female_message= _ "female^Argh, I’m dying!"
             [/message]
@@ -151,6 +152,7 @@
                 [then]
                     [message]
                         speaker=$unit.id
+                        side_for=$unit.side
                         message= _ "$unit.name a $nfwe_unit_type.name died."
                         female_message= _ "female^$unit.name a $nfwe_unit_type.name died."
                     [/message]
@@ -158,6 +160,7 @@
                 [else]
                     [message]
                         speaker=$unit.id
+                        side_for=$unit.side
                         message= _ "$unit.name a $nfwe_unit_type.name died."
                         female_message= _ "female^$unit.name a $nfwe_unit_type.female.name died."
                     [/message]
@@ -174,6 +177,7 @@
             [then]
                 [message]
                     speaker=$unit.id
+                    side_for=$unit.side
                     message= _ "Argh, I’m dying!"
                     female_message= _ "female^Argh, I’m dying!"
                 [/message]
@@ -185,6 +189,7 @@
                     [then]
                         [message]
                             speaker=$unit.id
+                            side_for=$unit.side
                             message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
                             female_message= _ "female^$unit.name a $nfwe_unit_type.name was revived as undead."
                         [/message]
@@ -192,6 +197,7 @@
                     [else]
                         [message]
                             speaker=$unit.id
+                            side_for=$unit.side
                             message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
                             female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was revived as undead."
                         [/message]
@@ -209,6 +215,7 @@
             [then]
                 [message]
                     speaker=$unit.id
+                    side_for=$unit.side
                     message= _ "Argh, I’m dying!"
                     female_message= _ "female^Argh, I’m dying!"
                 [/message]
@@ -220,6 +227,7 @@
                     [then]
                         [message]
                             speaker=$unit.id
+                            side_for=$unit.side
                             message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
                             female_message= _ "female^$unit.name a $nfwe_unit_type.name returned as a ghost."
                         [/message]
@@ -227,6 +235,7 @@
                     [else]
                         [message]
                             speaker=$unit.id
+                            side_for=$unit.side
                             message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
                             female_message= _ "female^$unit.name a $nfwe_unit_type.female.name returned as a ghost."
                         [/message]
@@ -244,6 +253,7 @@
             [then]
                 [message]
                     speaker=$unit.id
+                    side_for=$unit.side
                     message= _ "Argh!"
                 [/message]
                 [if]
@@ -254,6 +264,7 @@
                     [then]
                         [message]
                             speaker=$unit.id
+                            side_for=$unit.side
                             message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
                             female_message= _ "female^$unit.name a $nfwe_unit_type.name was converted by the enemy."
                         [/message]
@@ -261,6 +272,7 @@
                     [else]
                         [message]
                             speaker=$unit.id
+                            side_for=$unit.side
                             message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
                             female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was converted by the enemy."
                         [/message]
@@ -281,6 +293,7 @@
                     [then]
                         [message]
                             speaker=$unit.id
+                            side_for=$unit.side
                             message= _ "Argh!"
                         [/message]
                         [if]
@@ -291,6 +304,7 @@
                             [then]
                                 [message]
                                     speaker=$unit.id
+                                    side_for=$unit.side
                                     message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
                                     female_message= _ "female^$unit.name a $nfwe_unit_type.name was consumed by the enemy."
                                 [/message]
@@ -298,6 +312,7 @@
                             [else]
                                 [message]
                                     speaker=$unit.id
+                                    side_for=$unit.side
                                     message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
                                     female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was consumed by the enemy."
                                 [/message]
@@ -331,6 +346,7 @@
                     [then]
                         [message]
                             speaker=$unit.id
+                            side_for=$unit.side
                             message= _ "Please rescue me!"
                             female_message= _ "female^Please rescue me!"
                         [/message]
@@ -344,6 +360,7 @@
                     [then]
                         [message]
                             speaker=$unit.id
+                            side_for=$unit.side
                             message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
                             female_message= _ "female^$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
                         [/message]
@@ -351,6 +368,7 @@
                     [else]
                         [message]
                             speaker=$unit.id
+                            side_for=$unit.side
                             message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
                             female_message= _ "female^$unit.name, a $nfwe_unit_type.female.name, was captured by the enemy. You will have to pay a ransom."
                         [/message]
@@ -371,6 +389,7 @@
             [then]
                 [message]
                     speaker=$unit.id
+                    side_for=$unit.side
                     message= _ "Crash!"
                 [/message]
                 [if]
@@ -389,6 +408,7 @@
                             [then]
                                 [message]
                                     speaker=$unit.id
+                                    side_for=$unit.side
                                     message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
                                     female_message= _ "female^$unit.name a $nfwe_unit_type.name was destroyed."
                                 [/message]
@@ -396,6 +416,7 @@
                             [else]
                                 [message]
                                     speaker=$unit.id
+                                    side_for=$unit.side
                                     message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
                                     female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was destroyed."
                                 [/message]
@@ -416,6 +437,7 @@
             [then]
                 [message]
                     speaker=$unit.id
+                    side_for=$unit.side
                     message= _ "I can't fight anymore, I retreat!"
                     female_message= _ "female^I can't fight anymore, I retreat!"
                 [/message]
@@ -435,6 +457,7 @@
         [else]
             [message]
                 speaker=$unit.id
+                side_for=$unit.side
                 message= _ "Argh, I’m wounded!"
                 female_message= _ "female^Argh, I’m wounded!"
             [/message]
