ANO S08 Outlaw leader and fix recall variable

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -813,6 +813,56 @@
 [/event]
 #endif
 
+#ifdef ANEWORDER
+[event]
+    name=last_breath
+    id=nfw_robroe_hired
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 08_Outlaw_Base}
+        {VARIABLE_CONDITIONAL ano_robroe_hired equals yes}
+    [/filter_condition]
+    [filter]
+        id=Outlaw Leader
+    [/filter]
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Hire" color="100,255,100"}
+    {VARIABLE nfw_already_wound yes}
+[/event]
+
+[event]
+    name=victory
+    id=nfw_append_variable
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 08_Outlaw_Base}
+    [/filter_condition]
+    [foreach]
+        array=nfw_wounded
+        [do]
+            {VARIABLE this_item.hitpoints $this_item.max_hitpoints}
+            {VARIABLE this_item.status.poisoned "no"}
+            {VARIABLE this_item.status.slowed "no"}
+            [unstore_unit]
+                variable=this_item
+                x,y=recall,recall
+            [/unstore_unit]
+        [/do]
+    [/foreach]
+    {CLEAR_VARIABLE nfw_wounded}
+	[store_unit]
+		[filter]
+			side=1
+			[not]
+				find_in=ano_gawen_units
+			[/not]
+		[/filter]
+		mode=append
+		variable=ano_gawen_units
+		kill=yes
+	[/store_unit]
+[/event]
+
+#endif
+
 # Disable the mod on scenarios with {IS_LAST_SCENARIO}, both because there's no further recalls and because the ending may change slightly depending on which units die in the final battle.
 # This can't check for next_scenario=null, as many campaigns have an epilogue scenario.
 # Reading wesnoth.sides[x].objectives might be possible, but that's only available as the translated string.
