--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -491,6 +491,7 @@ This does not apply to any unit that the objectives require you to keep alive. E
 # In multiplayer the victory event is synchronized since 1.13.10
 [event]
     name=victory
+	id=nfw_victory_unstore
     [foreach]
         array=nfw_wounded
         [do]
