Message changed when name and type name are equals

--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -145,18 +145,32 @@
                 female_message= _ "female^Argh, I’m dying!"
             [/message]
             [if]
-                [variable]
-                    name=nfwe_unit_type.female.name
-                    equals=$nfw_empty_var
-                [/variable]
-                [then]
-                    [message]
-                        speaker=$unit.id
-                        side_for=$unit.side
-                        message= _ "$unit.name a $nfwe_unit_type.name died."
-                        female_message= _ "female^$unit.name a $nfwe_unit_type.name died."
-                    [/message]
-                [/then]
+				[variable]
+					name=unit.name
+					equals=$nfwe_unit_type.name
+				[/variable]
+				[then]
+					[message]
+						speaker=$unit.id
+						side_for=$unit.side
+						message= _ "$unit.name died."
+						female_message= _ "female^$unit.name died."
+					[/message]
+				[/then]
+                [elseif]
+					[variable]
+						name=nfwe_unit_type.female.name
+						equals=$nfw_empty_var
+					[/variable]
+					[then]
+						[message]
+							speaker=$unit.id
+							side_for=$unit.side
+							message= _ "$unit.name a $nfwe_unit_type.name died."
+							female_message= _ "female^$unit.name a $nfwe_unit_type.name died."
+						[/message]
+					[/then]
+                [/elseif]
                 [else]
                     [message]
                         speaker=$unit.id
@@ -182,18 +196,32 @@
                     female_message= _ "female^Argh, I’m dying!"
                 [/message]
                 [if]
-                    [variable]
-                        name=nfwe_unit_type.female.name
-                        equals=$nfw_empty_var
-                    [/variable]
-                    [then]
-                        [message]
-                            speaker=$unit.id
-                            side_for=$unit.side
-                            message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
-                            female_message= _ "female^$unit.name a $nfwe_unit_type.name was revived as undead."
-                        [/message]
-                    [/then]
+					[variable]
+						name=unit.name
+						equals=$nfwe_unit_type.name
+					[/variable]
+					[then]
+						[message]
+							speaker=$unit.id
+							side_for=$unit.side
+							message= _ "$unit.name was revived as undead."
+							female_message= _ "female^$unit.name was revived as undead."
+						[/message]
+					[/then]
+					[elseif]
+						[variable]
+							name=nfwe_unit_type.female.name
+							equals=$nfw_empty_var
+						[/variable]
+						[then]
+							[message]
+								speaker=$unit.id
+								side_for=$unit.side
+								message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
+								female_message= _ "female^$unit.name a $nfwe_unit_type.name was revived as undead."
+							[/message]
+						[/then]
+					[/elseif]
                     [else]
                         [message]
                             speaker=$unit.id
@@ -220,18 +248,32 @@
                     female_message= _ "female^Argh, I’m dying!"
                 [/message]
                 [if]
-                    [variable]
-                        name=nfwe_unit_type.female.name
-                        equals=$nfw_empty_var
-                    [/variable]
-                    [then]
-                        [message]
-                            speaker=$unit.id
-                            side_for=$unit.side
-                            message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
-                            female_message= _ "female^$unit.name a $nfwe_unit_type.name returned as a ghost."
-                        [/message]
-                    [/then]
+					[variable]
+						name=unit.name
+						equals=$nfwe_unit_type.name
+					[/variable]
+					[then]
+						[message]
+							speaker=$unit.id
+							side_for=$unit.side
+							message= _ "$unit.name returned as a ghost."
+							female_message= _ "female^$unit.name returned as a ghost."
+						[/message]
+					[/then]
+					[elseif]
+						[variable]
+							name=nfwe_unit_type.female.name
+							equals=$nfw_empty_var
+						[/variable]
+						[then]
+							[message]
+								speaker=$unit.id
+								side_for=$unit.side
+								message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
+								female_message= _ "female^$unit.name a $nfwe_unit_type.name returned as a ghost."
+							[/message]
+						[/then]
+					[/elseif]
                     [else]
                         [message]
                             speaker=$unit.id
@@ -257,18 +299,32 @@
                     message= _ "Argh!"
                 [/message]
                 [if]
-                    [variable]
-                        name=nfwe_unit_type.female.name
-                        equals=$nfw_empty_var
-                    [/variable]
-                    [then]
-                        [message]
-                            speaker=$unit.id
-                            side_for=$unit.side
-                            message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
-                            female_message= _ "female^$unit.name a $nfwe_unit_type.name was converted by the enemy."
-                        [/message]
-                    [/then]
+					[variable]
+						name=unit.name
+						equals=$nfwe_unit_type.name
+					[/variable]
+					[then]
+						[message]
+							speaker=$unit.id
+							side_for=$unit.side
+							message= _ "$unit.name was converted by the enemy."
+							female_message= _ "female^$unit.name was converted by the enemy."
+						[/message]
+					[/then]
+					[elseif]
+						[variable]
+							name=nfwe_unit_type.female.name
+							equals=$nfw_empty_var
+						[/variable]
+						[then]
+							[message]
+								speaker=$unit.id
+								side_for=$unit.side
+								message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
+								female_message= _ "female^$unit.name a $nfwe_unit_type.name was converted by the enemy."
+							[/message]
+						[/then]
+					[/elseif]
                     [else]
                         [message]
                             speaker=$unit.id
@@ -297,18 +353,32 @@
                             message= _ "Argh!"
                         [/message]
                         [if]
-                            [variable]
-                                name=nfwe_unit_type.female.name
-                                equals=$nfw_empty_var
-                            [/variable]
-                            [then]
-                                [message]
-                                    speaker=$unit.id
-                                    side_for=$unit.side
-                                    message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
-                                    female_message= _ "female^$unit.name a $nfwe_unit_type.name was consumed by the enemy."
-                                [/message]
-                            [/then]
+							[variable]
+								name=unit.name
+								equals=$nfwe_unit_type.name
+							[/variable]
+							[then]
+								[message]
+									speaker=$unit.id
+									side_for=$unit.side
+									message= _ "$unit.name was consumed by the enemy."
+									female_message= _ "female^$unit.name was consumed by the enemy."
+								[/message]
+							[/then]
+							[elseif]
+								[variable]
+									name=nfwe_unit_type.female.name
+									equals=$nfw_empty_var
+								[/variable]
+								[then]
+									[message]
+										speaker=$unit.id
+										side_for=$unit.side
+										message= _ "$unit.name a $nfwe_unit_type.name was consumed by the enemy."
+										female_message= _ "female^$unit.name a $nfwe_unit_type.name was consumed by the enemy."
+									[/message]
+								[/then]
+							[/elseif]
                             [else]
                                 [message]
                                     speaker=$unit.id
@@ -353,18 +423,32 @@
                     [/then]
                 [/if]
                 [if]
-                    [variable]
-                        name=nfwe_unit_type.female.name
-                        equals=$nfw_empty_var
-                    [/variable]
-                    [then]
-                        [message]
-                            speaker=$unit.id
-                            side_for=$unit.side
-                            message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
-                            female_message= _ "female^$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
-                        [/message]
-                    [/then]
+					[variable]
+						name=unit.name
+						equals=$nfwe_unit_type.name
+					[/variable]
+					[then]
+						[message]
+							speaker=$unit.id
+							side_for=$unit.side
+							message= _ "$unit.name was captured by the enemy. You will have to pay a ransom."
+							female_message= _ "female^$unit.name was captured by the enemy. You will have to pay a ransom."
+						[/message]
+					[/then]
+					[elseif]
+						[variable]
+							name=nfwe_unit_type.female.name
+							equals=$nfw_empty_var
+						[/variable]
+						[then]
+							[message]
+								speaker=$unit.id
+								side_for=$unit.side
+								message= _ "$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
+								female_message= _ "female^$unit.name, a $nfwe_unit_type.name, was captured by the enemy. You will have to pay a ransom."
+							[/message]
+						[/then]
+					[/elseif]
                     [else]
                         [message]
                             speaker=$unit.id
@@ -401,26 +485,40 @@
                     [/have_location]
                     [then]
                         [if]
-                            [variable]
-                                name=nfwe_unit_type.female.name
-                                equals=$nfw_empty_var
-                            [/variable]
-                            [then]
-                                [message]
-                                    speaker=$unit.id
-                                    side_for=$unit.side
-                                    message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-                                    female_message= _ "female^$unit.name a $nfwe_unit_type.name was destroyed."
-                                [/message]
-                            [/then]
-                            [else]
-                                [message]
-                                    speaker=$unit.id
-                                    side_for=$unit.side
-                                    message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-                                    female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was destroyed."
-                                [/message]
-                            [/else]
+							[variable]
+								name=unit.name
+								equals=$nfwe_unit_type.name
+							[/variable]
+							[then]
+								[message]
+									speaker=$unit.id
+									side_for=$unit.side
+									message= _ "$unit.name was destroyed."
+									female_message= _ "female^$unit.name was destroyed."
+								[/message]
+							[/then]
+							[elseif]
+								[variable]
+									name=nfwe_unit_type.female.name
+									equals=$nfw_empty_var
+								[/variable]
+								[then]
+									[message]
+										speaker=$unit.id
+										side_for=$unit.side
+										message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+										female_message= _ "female^$unit.name a $nfwe_unit_type.name was destroyed."
+									[/message]
+								[/then]
+								[else]
+									[message]
+										speaker=$unit.id
+										side_for=$unit.side
+										message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
+										female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was destroyed."
+									[/message]
+								[/else]
+							[/elseif]
                         [/if]
                     [/then]
                 [/if]
