--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -2,11 +2,29 @@
 # Complete menu with help and configurations
 # Author: Toranks
 
-#To show different variables on help menu
+
+#define NFW_MENU_ELEMENTALS VARIANT
+	[message]
+		speaker=narrator
+		message=_"* <b><i>Wound</i> +Buffs -Debuffs > Possible units and conditions = Healing method</b>
+
+* <b><i><span color='#FF6400'>Fire elemental</span></i></b> +30% fire resistance +All attacks changed to fire -35% damage -35% HP > Units with fire attacks, or wounded with fire, or on a terrain with lava or fire = 4 HP when either the attacker or defender are in a terrain with fire or lava, once per attack
+* <b><i><span color='#0064FF'>Water elemental</span></i></b> +30% cold resistance +All attacks changed to cold and have slow ability -50% damage -40% HP > Units with cold attacks, or nagas and mermans, or wounded with cold, or on a terrain with water or cold = 2 HP when either the attacker or defender are in a terrain with water, once per attack
+* <b><i><span color='#00AF00'>Poison elemental</span></i></b> +30% pierce resistance +All attacks changed to pierce with poison -40% damage -50% HP > Units with pierce or poison attacks, or wounded with pierce or poison = 8 HP when attacked with poison, only on defense, once per attack
+* <b><i><span color='#963296'>Arcane elemental</span></i></b> +30% arcane resistance +All attacks changed to arcane -30% damage -40% HP > Units with arcane attacks, or wounded with arcane, or on a terrain with ethereal abyss = 8 HP when either the attacker or defender are in a terrain with ethereal abyss, once per attack
+* <b><i><span color='#7D3C00'>Earth elemental</span></i></b> +30% impact resistance +All attacks changed to impact -25% damage -30% HP -20% MP > Units with impact attacks, or wounded with impact, or on a cave terrain = 2 HP when either the attacker or defender are in a cave terrain, once per attack
+* <b><i><span color='#00FFFF'>Air elemental</span></i></b> +40% blade +20% pierce +20% impact resistance +All attacks changed to blade +30% MP -40% damage -60% HP > Units with blade attacks, or birds, falcons, gryphon, bats, or wounded with blade, or on a terrain with windmill = 4 HP when either the attacker or defender are in a terrain with windmill, once per attack
+* <b><i>All elementals</i></b> > Mechanical, undead, ghosts, spirits, magical and elemental units can't receive any elemental wound, and no unit can received it twice, all have the elemental trait (inmune to poison, drain and plague), ~&lt;15% chance if conditions are met"
+		image="misc/{VARIANT}"
+		{NFW_MENU_EXIT}
+	[/message]
+#enddef
+
 
 #define NFW_MENU_EXIT
     [option]
-        label="<b>»</b> "+_"Back to help menu"
+		image="misc/nfw-back.png"
+        label=_"Back to help menu"
         default=yes
         [command]
             [fire_event]
@@ -15,6 +33,7 @@
         [/command]
     [/option]
     [option]
+		image="misc/nfw-exit.png"
         label="<b>"+_"Exit"+"</b>"
         [command]
         [/command]
@@ -33,7 +52,7 @@
 <b><span color='#00E600'>"+_"Float text"+": "+"</span><span color='#00FFFF'>"+"{FLOAT}"+"</span></b>
 <b><span color='#00E600'>"+_"Messages"+": "+"</span><span color='#00FFFF'>"+"{MESSAGE}"+"</span></b>"
         side_for=$side_number
-        image="misc/nfw-icon.png"
+        image="misc/aethyr-first.webp"
         [option]
             label="<b>»</b> "+_"Change status of Wounds"
             default=yes
@@ -197,7 +216,7 @@
 * <b><i>Lost</i></b> (equivalent to death) > Units non unplagueables, killed with plague attack, 100%
 * <b><i>Consume</i></b> (equivalent to death) > Not mechanical or undead, killed with soul catcher attack, 100%"
                     side_for=$side_number
-                    image="misc/nfw-icon.png"
+                    image="misc/asheviere-defeated.webp"
                     {NFW_MENU_EXIT}
                 [/message]
             [/command]
@@ -221,7 +240,7 @@
 * <b><i>Fear of fog</i></b> (-50% mp when fog is active) > Not mechanical, wounded with fog active, cumulative, 4%
 * <b><i>Insanity</i></b> (berserk on melee attacks) > Not mechanical, without berserk ability, 1%"
                     side_for=$side_number
-                    image="misc/nfw-icon.png"
+                    image="misc/deoran-sad.webp"
                     {NFW_MENU_EXIT}
                 [/message]
             [/command]
@@ -268,7 +287,7 @@
 * <b><i>Turning into a ghost</i></b>: -60% HP; -30% general attack damage; spirit type movement, defenses and resistances; chaotic alignment; ranged attack changed to cold if not magical, arcane or fire; melee attack changed to arcane, with drain, and with -25% damage if not magical, cold, fire or arcane > Units that are not already spirits, ghosts, magical or elemental; 5% chance
 * <b><i>Turning into a zombie</i></b>: -40% HP, -30% general attack damage, -30% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment and fearless, plague on melee, and poor markmanship on marksmans > Units that are not already undead, elemental or magical, 10% chance"
         side_for=$side_number
-        image="misc/nfw-icon.png"
+        image="misc/bone-captain2.webp"
         [option]
             label="<b>»</b> "+_"Change status of Death"
             [command]
@@ -336,7 +355,7 @@
 
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"
         side_for=$side_number
-        image="misc/nfw-icon.png"
+        image="misc/elementals.png"
         [option]
             label="<b>»</b> "+_"Change status of Elementals"
             [command]
@@ -381,27 +400,41 @@
         [option]
             label="<b>»</b> "+_"List of elemental transformations"
             [command]
-                [message]
-                    speaker=narrator
-                    message=_"* <b><i>Wound</i> +Buffs -Debuffs > Possible units and conditions = Healing method</b>
-
-* <b><i><span color='#FF6400'>Fire elemental</span></i></b> +30% fire resistance +All attacks changed to fire -35% damage -35% HP > Units with fire attacks, or wounded with fire, or on a terrain with lava or fire = 4 HP when either the attacker or defender are in a terrain with fire or lava, once per attack
-* <b><i><span color='#0064FF'>Water elemental</span></i></b> +30% cold resistance +All attacks changed to cold and have slow ability -50% damage -40% HP > Units with cold attacks, or nagas and mermans, or wounded with cold, or on a terrain with water or cold = 2 HP when either the attacker or defender are in a terrain with water, once per attack
-* <b><i><span color='#00AF00'>Poison elemental</span></i></b> +30% pierce resistance +All attacks changed to pierce with poison -40% damage -50% HP > Units with pierce or poison attacks, or wounded with pierce or poison = 8 HP when attacked with poison, only on defense, once per attack
-* <b><i><span color='#963296'>Arcane elemental</span></i></b> +30% arcane resistance +All attacks changed to arcane -30% damage -40% HP > Units with arcane attacks, or wounded with arcane, or on a terrain with ethereal abyss = 8 HP when either the attacker or defender are in a terrain with ethereal abyss, once per attack
-* <b><i><span color='#7D3C00'>Earth elemental</span></i></b> +30% impact resistance +All attacks changed to impact -25% damage -30% HP -20% MP > Units with impact attacks, or wounded with impact, or on a cave terrain = 2 HP when either the attacker or defender are in a cave terrain, once per attack
-* <b><i><span color='#00FFFF'>Air elemental</span></i></b> +40% blade +20% pierce +20% impact resistance +All attacks changed to blade +30% MP -40% damage -60% HP > Units with blade attacks, or birds, falcons, gryphon, bats, or wounded with blade, or on a terrain with windmill = 4 HP when either the attacker or defender are in a terrain with windmill, once per attack
-* <b><i>All elementals</i></b> > Mechanical, undead, ghosts, spirits, magical and elemental units can't receive any elemental wound, and no unit can received it twice, all have the elemental trait (inmune to poison, drain and plague), ~&lt;15% chance if conditions are met"
-                    image="misc/nfw-icon.png"
-                    {NFW_MENU_EXIT}
-                [/message]
+				{VARIABLE_OP nfw_elementals rand "1..6"}
+				[switch]
+					variable=nfw_elementals
+					[case]
+						value=1
+						{NFW_MENU_ELEMENTALS fire-elemental.png}
+					[/case]
+					[case]
+						value=2
+						{NFW_MENU_ELEMENTALS water-elemental.png}
+					[/case]
+					[case]
+						value=3
+						{NFW_MENU_ELEMENTALS arcane-elemental.png}
+					[/case]
+					[case]
+						value=4
+						{NFW_MENU_ELEMENTALS poison-elemental.png}
+					[/case]
+					[case]
+						value=5
+						{NFW_MENU_ELEMENTALS earth-elemental.png}
+					[/case]
+					[case]
+						value=6
+						{NFW_MENU_ELEMENTALS air-elemental.png}
+					[/case]
+				[/switch]
             [/command]
         [/option]
         {NFW_MENU_EXIT}
     [/message]
 #enddef
 
-#define NFW_FUNNY STATUS
+#define NFW_FUNNY STATUS WOUND
     [message]
         speaker=narrator
         message="<b>"+_"Funny wounds"+" → "+"</b>"+_"Add funny and silly wounds that are incurable as a possibility to the table."+"
@@ -416,7 +449,7 @@
 * <b><i>Go to Hell</i></b> (-50% damage and -50% arcane resistance, melee attacks changed to cold and ranged to fire, elemental trait, inmune to poison, drain and plague) > All units, 2% chance
 * <b><i>Go to Heaven</i></b> (-50% hp, -50% fire and cold resistance and +50% arcane resistance, ranged attacks changed to arcane, elemental trait, inmune to poison, drain and plague) > All units, 2% chance"
         side_for=$side_number
-        image="misc/nfw-icon.png"
+        image="misc/{WOUND}"
         [option]
             label="<b>»</b> "+_"Change status of Funny wounds"
             [command]
@@ -462,6 +495,7 @@
     [/message]
 #enddef
 
+
 [event]
     name=start
     [filter_condition]
@@ -486,33 +520,49 @@
         speaker=narrator
         message="<b><i>"+_"Choose the feature you want help with"+"</i></b>"
         side_for=$side_number
-        image="misc/nfw-icon.png"
+        image="misc/lisar-defeat.webp"
         [option]
-            label="<b>»</b> "+_"Wounds"
+			image="misc/nfw-wounds.png"
+            label=_"Wounds"
             [command]
                 {NFW_WOUNDS $nfwe_wounds $nfwe_float_text $nfw_dialog_manual}
             [/command]
         [/option]
         [option]
-            label="<b>»</b> "+_"Death"
+			image="misc/nfw-death.png"
+            label=_"Death"
             [command]
                 {NFW_DEATH $nfwe_deadundead}
             [/command]
         [/option]
         [option]
-            label="<b>»</b> "+_"Elementals"
+			image="misc/nfw-elementals.png"
+            label=_"Elementals"
             [command]
                 {NFW_ELEMENTAL $nfwe_elemental}
             [/command]
         [/option]
         [option]
-            label="<b>»</b> "+_"Funny wounds"
+			image="misc/nfw-lego.png"
+            label=_"Funny wounds"
             [command]
-                {NFW_FUNNY $nfwe_funny}
+				{VARIABLE_OP nfw_funny rand "1..2"}
+				[switch]
+					variable=nfw_funny
+					[case]
+						value=1
+						{NFW_FUNNY $nfwe_funny devil-wound.png}
+					[/case]
+					[case]
+						value=2
+						{NFW_FUNNY $nfwe_funny angel-wound.png}
+					[/case]
+				[/switch]
             [/command]
         [/option]
         [option]
-            label="<b><b>»</b> "+_"Stop Non-Fatal Wounds for this scenario"+"</b>"
+			image="misc/nfw-stop.png"
+            label="<b> "+_"Stop Non-Fatal Wounds for this scenario"+"</b>"
             [show_if]
                 {VARIABLE_CONDITIONAL nfw_disabled not_equals yes}
             [/show_if]
@@ -540,7 +590,8 @@
             [/command]
         [/option]
         [option]
-            label="<b><b>»</b> "+_"Non-Fatal Wounds is disabled for this scenario"+"</b>"
+			image="misc/nfw-stop.png"
+            label="<b> "+_"Non-Fatal Wounds is disabled for this scenario"+"</b>"
             [show_if]
                 {VARIABLE_CONDITIONAL nfw_disabled equals yes}
             [/show_if]
@@ -551,6 +602,7 @@
             [/command]
         [/option]
         [option]
+			image="misc/nfw-exit.png"
             label="<b>"+_"Exit"+"</b>"
             default=yes
             [command]
