Bigger death icon

--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -515,7 +515,7 @@
     first_time_only=no
     [message]
         speaker=narrator
-        message="<b><i>"+_"Choose the feature you want help with"+"</i></b>"
+        message="<b><i>"+_"Choose the feature you want help with"+":</i></b>"
         side_for=$side_number
         image="misc/lisar-defeat.webp"
         [option]
