Filtered units without advancements or AMLAs
To not trigger experience-related wounds

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -268,6 +268,24 @@
                                 formula="experience > (max_experience / 1.5)"
                             [/filter]
                         [/have_location]
+                        [and]
+                            [have_location]
+                                {EVENT_UNIT}
+                                [filter]
+                                    [filter_wml]
+                                        [advancement]
+                                            glob_on_id=*
+                                        [/advancement]
+                                    [/filter_wml]
+                                [/filter]
+                            [/have_location]
+                            [or]
+                                {VARIABLE_CONDITIONAL unit.advances_to not_equals $nfw_empty_var}
+                                [and]
+                                    {VARIABLE_CONDITIONAL unit.advances_to not_equals ""}
+                                [/and]
+                            [/or]
+                        [/and]
                         [then]
                             {NFW_short_term_memory_loss_WOUND}
                             {VARIABLE nfw_already_wound yes}
@@ -286,6 +304,24 @@
                                 [/then]
                                 [elseif]
                                     {VARIABLE_CONDITIONAL rand_wound greater_than 18}
+                                    [and]
+                                        [have_location]
+                                            {EVENT_UNIT}
+                                            [filter]
+                                                [filter_wml]
+                                                    [advancement]
+                                                        glob_on_id=*
+                                                    [/advancement]
+                                                [/filter_wml]
+                                            [/filter]
+                                        [/have_location]
+                                        [or]
+                                            {VARIABLE_CONDITIONAL unit.advances_to not_equals $nfw_empty_var}
+                                            [and]
+                                                {VARIABLE_CONDITIONAL unit.advances_to not_equals ""}
+                                            [/and]
+                                        [/or]
+                                    [/and]
                                     [then]
                                         {NFW_amnesia_WOUND}
                                         {VARIABLE nfw_already_wound yes}
@@ -1436,6 +1472,26 @@
                                 ability=amnesia_dummy
                             [/filter]
                         [/have_location]
+                        [or]
+                            [not]
+                                [have_location]
+                                    {EVENT_UNIT}
+                                    [filter]
+                                        [filter_wml]
+                                            [advancement]
+                                                glob_on_id=*
+                                            [/advancement]
+                                        [/filter_wml]
+                                    [/filter]
+                                [/have_location]
+                            [/not]
+                            [and]
+                                {VARIABLE_CONDITIONAL unit.advances_to equals $nfw_empty_var}
+                                [or]
+                                    {VARIABLE_CONDITIONAL unit.advances_to equals ""}
+                                [/or]
+                            [/and]
+                        [/or]
                         [else]
                             {NFW_amnesia_WOUND}
                             {VARIABLE rand_wound_selected yes}
@@ -1574,6 +1630,24 @@
                                 formula="experience > (max_experience / 1.5)"
                             [/filter]
                         [/have_location]
+                        [and]
+                            [have_location]
+                                {EVENT_UNIT}
+                                [filter]
+                                    [filter_wml]
+                                        [advancement]
+                                            glob_on_id=*
+                                        [/advancement]
+                                    [/filter_wml]
+                                [/filter]
+                            [/have_location]
+                            [or]
+                                {VARIABLE_CONDITIONAL unit.advances_to not_equals $nfw_empty_var}
+                                [and]
+                                    {VARIABLE_CONDITIONAL unit.advances_to not_equals ""}
+                                [/and]
+                            [/or]
+                        [/and]
                         [then]
                             {NFW_short_term_memory_loss_WOUND}
                             {VARIABLE rand_wound_selected yes}
