--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -46,7 +46,7 @@
 "+_"Note: You can disable wounds along with any combination of activated optional wounds. It will be decided randomly with the same percentage chance as if you had normal wounds activated. Units that do not receive any optional or scripted wounds will return to the recall list unchanged."+"
 
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
- "+_"(0 = Activated, 1 = Deactivated, 2 = Deactivated but with plague losses)"+"
+ "+_"(<span color='#00FFFF'>0</span> = Activated, <span color='#00FFFF'>1</span> = Deactivated, <span color='#00FFFF'>2</span> = Deactivated but with plague losses)"+"
 <b><span color='#00E600'>"+_"Float text"+": "+"</span><span color='#00FFFF'>"+"{FLOAT}"+"</span></b>
 <b><span color='#00E600'>"+_"Messages"+": "+"</span><span color='#00FFFF'>"+"{MESSAGE}"+"</span></b>"
         side_for=$side_number
@@ -226,7 +226,7 @@
                     speaker=narrator
                     message=_"* <b><i>Wound</i> (effect) > Possible destination units, previous conditions, cumulative, percentaje if all conditions are met - with additional conditions</b>
 
-* <b><i>Amnesia</i></b> (loses 2 xp/turn) > All units, random, 1% - ~&lt;10% mechanical
+* <b><i>Amnesia</i></b> (loses 2 xp/turn) > All units with experience, random, 1% - ~&lt;10% mechanical
 * <b><i>Short-term memory loss</i></b> (resets experience) > Units with more than 3/4 of the max experience, random, 10% - 25% mechanical
 * <b><i>Concussion</i></b> (-30% magical damage) > Units with magical attacks, random, cumulative, 3%
 * <b><i>Wild magic</i></b> (magical attacks now are 40% chance) > Units with magical attacks, random, 2%
@@ -277,7 +277,7 @@
         message="<b>"+_"Activate Death"+" → "+"</b>"+_"Adds death as a possibility to the table. Undeath option will bring some of them back as undead or ghost."+" "+_"Only applies with Wounds enabled."+"
 
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
- "+_"(0 = Deactivated, 1 = Death, 2 = Death + Undeath)"+"
+ "+_"(<span color='#00FFFF'>0</span> = Deactivated, <span color='#00FFFF'>1</span> = Death, <span color='#00FFFF'>2</span> = Death + Undeath)"+"
 
 "+_"<b>Wounds list:</b>
 * <b><i>Death</i></b>: Definitive death, 33% chance - 20% with Undeath active - 66% kamikaze units
