Advancement icons fixed

--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -110,7 +110,7 @@
                     id=NFW_broken_arm_Healing
                     description=_ "Recover from broken arm"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -152,7 +152,7 @@
                     id=NFW_broken_wing_Healing
                     description=_ "Recover from broken wing"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -194,7 +194,7 @@
                     id=NFW_broken_leg_Healing
                     description=_ "Recover from broken leg"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -239,7 +239,7 @@
                     id=NFW_broken_rib_Healing
                     description= _"Recover from broken rib"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -285,7 +285,7 @@
                     id=NFW_burned_Healing
                     description= _"Recover from burn"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -361,7 +361,7 @@
                     id=NFW_concussion_Healing
                     description= _"Recover from concussion"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -802,7 +802,7 @@ Face your fears to try to overcome them."
                     id=NFW_frostbite_Healing
                     description= _"Recover from frostbite"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -847,7 +847,7 @@ Face your fears to try to overcome them."
                     id=NFW_gash_Healing
                     description= _"Recover from gash"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -886,7 +886,7 @@ Face your fears to try to overcome them."
                     id=NFW_infectiont_Healing
                     description= _"Recover from infection"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -939,7 +939,7 @@ Face your fears to try to overcome them."
                     id=NFW_insane_Healing
                     description= _"Recover from insanity"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -982,7 +982,7 @@ Face your fears to try to overcome them."
                     id=NFW_maimed_Healing
                     description= _"Recover from mutilation"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1037,7 +1037,7 @@ Face your fears to try to overcome them."
                     id=NFW_necrosis_Healing
                     description= _"Recover from necrosis"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1084,7 +1084,7 @@ Face your fears to try to overcome them."
                     id=NFW_necrosis_Healing
                     description= _"Recover from rot"
                     max_times=-1
-                    icon="misc/workbench.png"
+                    image="misc/workbench.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1122,7 +1122,7 @@ Face your fears to try to overcome them."
                     id=NFW_amnesia_Healing
                     description= _"Recover from amnesia"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1161,7 +1161,7 @@ Face your fears to try to overcome them."
                     id=NFW_sick_Healing
                     description= _"Recover from sickness"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1214,7 +1214,7 @@ Face your fears to try to overcome them."
                     id=NFW_wild_magic_Healing
                     description= _"Recover from wild magic"
                     max_times=-1
-                    icon="misc/staminapotion.png"
+                    image="misc/staminapotion.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
@@ -1269,7 +1269,7 @@ Face your fears to try to overcome them."
                     id=NFW_damaged_Healing
                     description= _"Repair"
                     max_times=-1
-                    icon="misc/workbench.png"
+                    image="misc/workbench.png"
                     [effect]
                         apply_to=new_ability
                         [abilities]
