New Event LOTI C1 S11

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -371,6 +371,24 @@
             {CLEAR_VARIABLE nfw_wounded}
         [/case]
 #endif
+#ifdef CAMPAIGN_LEGEND_OF_THE_INVINCIBLES_PART_I
+        [case]
+            value=11_Ascension
+            [message]
+                speaker=narrator
+                message= _ "<b><i>Non-Fatal Wounds</i></b> modification is disabled for this scenario."
+                image="misc/nfw-icon.png"
+            [/message]
+            [remove_event]
+                id=nfw_catch_last_breath,nfwe_rand_wound_table,nfwme_death_wounds,nfwme_elemental_wounds,nfwme_captured_heroes_wound,nfwme_mechanical_wound,nfwme_funny_wounds,nfwme_wound_filter
+            [/remove_event]
+            [set_variable]
+                name=nfw_disabled
+                value=yes
+            [/set_variable]
+            {CLEAR_VARIABLE nfw_wounded}
+        [/case]
+#endif
     [/switch]
 [/event]
 
@@ -860,7 +878,21 @@
         kill=yes
     [/store_unit]
 [/event]
+#endif
 
+#ifdef CAMPAIGN_LEGEND_OF_THE_INVINCIBLES_PART_I
+[event]
+    name=last_breath
+    id=nfw_ascension_deactivated
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 11_Ascension}
+    [/filter_condition]
+    [filter]
+        canrecruit=yes
+    [/filter]
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Enslaved" color="100,255,100"}
+[/event]
 #endif
 
 # Disable the mod on scenarios with {IS_LAST_SCENARIO}, both because there's no further recalls and because the ending may change slightly depending on which units die in the final battle.
