--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -590,16 +590,30 @@ This does not apply to any unit that the objectives require you to keep alive. E
 [event]
     name=victory
     id=nfw_victory_unstore
+    [store_unit]
+        [filter]
+        [/filter]
+        variable=nfw_alive_units
+    [/store_unit]
     [foreach]
         array=nfw_wounded
         [do]
-            {VARIABLE this_item.hitpoints $this_item.max_hitpoints}
-            {VARIABLE this_item.status.poisoned "no"}
-            {VARIABLE this_item.status.slowed "no"}
-            [unstore_unit]
-                variable=this_item
-                x,y=recall,recall
-            [/unstore_unit]
+            [if]
+                [have_unit]
+                    id=$this_item.id
+                    find_in=nfw_alive_units
+                    search_recall_list=yes
+                [/have_unit]
+                [else]
+                    {VARIABLE this_item.hitpoints $this_item.max_hitpoints}
+                    {VARIABLE this_item.status.poisoned "no"}
+                    {VARIABLE this_item.status.slowed "no"}
+                    [unstore_unit]
+                        variable=this_item
+                        x,y=recall,recall
+                    [/unstore_unit]
+                [/else]
+            [/if]
         [/do]
     [/foreach]
     {CLEAR_VARIABLE nfw_wounded}
